Modified layout and config file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,7 @@
           <ul class='title-area'>
             <li class='name'>
               <h1>
-                <img src='{{site.url}}/images/logo.png'>
-                <a href='/'>{{ site.name }}</a>
+                <img src='{{site.url}}/images/otoflo-logo.png'>
               </h1>
             </li>
             <li class='toggle-topbar menu-icon'>
@@ -68,10 +67,8 @@
         <div class='row'>
           <div class='large-12 columns'></div>
           <h1 class='light'>
-            <img src='{{site.url}}/images/logo-grey.png'>
-            <br>
+            <img src='{{site.url}}/images/otoflo-logo-gray.png' width="226" height="70">
             <div class='spacing'></div>
-            {{ site.name }}
           </h1>
           <div class='spacing'></div>
           <div class='spacing'></div>
@@ -89,7 +86,7 @@
               <i class='icon-mail grey'></i>
             </a>
           </div>
-          <p class='copyright'>Copyright 2013 Squarebox</p>
+          <p class='copyright'>Copyright 2016 Otoflo</p>
         </div>
       </div>
 
