Changed yellow to green values - initial stab

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4 {
 }
 
 .yellow {
-  background: #fcbf31;
+  background: #2dc110;
 }
 
 .dark-blue {
@@ -38,7 +38,7 @@ h1, h2, h3, h4 {
 }
 
 .light-yellow {
-  background: #fef6df;
+  background: #cce7c6;
 }
 
 .light-grey {
